--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <div id="container">
         <h1>Aplicacion de clima</h1>
-        <input class="cityInput" type="text" id="cityInput" placeholder="Ingrese ciudad">
+        <input class="cityInput" type="text" id="cityInput" placeholder="Ingrese una ciudad">
         <button class="searchButton" id="searchButton"> Buscar</button>
         <div id="weatherData"></div>
     </div>
