se agrega footer

--- a/index.html
+++ b/index.html
@@ -26,4 +26,10 @@
 
 </body>
 
+<footer>
+    <p>Autor: Pablo Ezequiel Necco</p>
+    <a href="https://www.linkedin.com/in/pablo-ezequiel-necco/" target="_blank">Linkedin</a>
+    <a href="https://github.com/pablonecco/" target="_blank">GitHub</a>
+</footer>
+
 </html>
